=head1 Changes in 2.5.5

=over 2

=item *

B<innwatch> no longer creates a child process only for sleeping and then
waits on that process.  The forked-off process only died after it had
done sleeping, which caused the INN service to drop into maintenance
state when for instance running under SMF on illumos/Solaris (since
not all processes die within timeout).  Thanks to Lauri Tirkkonen for
the patch.

=item *

Add new B<-i> flag to both B<cnfsstat> and B<innwatch> to specify
how many seconds they should sleep at startup.  It will especially be
useful in B<rc.news> so that these scripts are actually started and then
sleep by themselves, instead of being started a minute after B<innd>
and therefore not being properly stopped if C<rc.news stop> is invoked
during that minute.

=item *

Add new B<-f> flag to C<innwatch> to specify the configuration file to 
use, in case it is not the default F<innwatch.ctl> file.

=item *

Fixed how B<innupgrade> is executed during an update of an INN
installation; on a few systems like AIX, it fails to run because its
taint mode was unproperly declared.

=item *

Several improvements have been contributed to B<pullnews> by Geraint
Edwards:  the new B<-a> flag adds the Diablo-compatible hashfeed
ability, the new B<-B> flag triggers header-only feeding, the B<-m>
flag now permits to remove headers matching (or not) a given regexp,
and B<rnews> reporting is improved.

=back

=head1 Changes in 2.5.4

=over 2

=item *

An up-to-date F<control.ctl> file is provided with this release.  You should
manually update your F<control.ctl> file with the new information recorded
about Usenet hierarchies.

=item *

A test has been improved in F<innwatch.ctl> so that B<innwatch> no
longer throttles B<innd> when no overview directory exists.  You should
manually update your F<innwatch.ctl> file to get this improvement.

=item *

Fixed a long-standing limitation on how B<controlchan> and B<pgpverify>