@@ -1014,8 +1014,11 @@ The default value is C<10000>.
 
 =back
 
-Finally, here are the parameters used by nnrpd(8) to provide TLS/SSL
-support:
+=head2 TLS/SSL Support for Reading and Posting
+
+Here are the parameters used by nnrpd(8) to provide TLS/SSL support.
+
+The parameters related to certificates are:
 
 =over 4
 
@@ -1053,6 +1056,44 @@ I<pathetc>/key.pem.
 
 This file must only be readable by the news user or B<nnrpd> will refuse to
 use it.
+
+=back
+
+Finally, here are the parameters that can be used to tighten the level
+of security provided by TLS/SSL:
+
+=over 4
+
+=item I<tlsciphers>
+
+The string describing the cipher suites OpenSSL will support.  See
+OpenSSL's ciphers(1) command documentation for details.  The default
+is unset, which uses OpenSSL's default cipher suite list.
+
+=item I<tlscompression>
+
+Whether to enable or disable SSL/TLS compression support.  This is a
+boolean and the default is true.  (Note that the default value will be
+false in the next major release of INN.)
+
+=item I<tlspreferserverciphers>
+
+Whether to let the client or the server decide the preferred cipher.
+This is a boolean and the default is false, that is to say the client
+decides the preferred cipher.  (Note that the default value will be
+true in the next major release of INN.)
+
+=item I<tlsprotocols>
+
+The list of SSL/TLS protocol versions to support.  Valid protocols are
+B<SSLv2>, B<SSLv3>, B<TLSv1>, B<TLSv1.1> and B<TLSv1.2>.  The default
+value is to allow all these protocols:
+
+    tlsprotocols: [ SSLv2 SSLv3 TLSv1 TLSv1.1 TLSv1.2 ]
+
+Note that the default value will be to only allow TLS protocols in
+the next major release of INN (using SSLv2 and SSLv3 will be disabled
+by default).
 
 =back
 
